--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest && (cd insurance-frontend && npm test)",
-    "coverage": "jest --coverage"
-   
+    "test": "jest --config=jest.config.js --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
